# ai-agent-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: README.md  faq.md  glossary.md
examples/case-studies/: 2024-02-20_github-copilot.md  README.md
src/: __init__.py  cli.py
src/agents/: __init__.py  base.py  react_agent.py  rewoo_agent.py
src/agents/paradigms/: __init__.py  base.py  react.py  rewoo.py
src/agents/types/: __init__.py  base.py  model_based_reflex.py  simple_reflex.py
src/clients/: __init__.py  base.py  ollama_client.py
src/examples/: __init__.py  goals.py
