[tool.poetry]
package-mode = false
name = "ai-agent"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.12"
fire = "^0.5.0"
rich = "^13.7.0"
requests = "^2.31.0"
pydantic = "^2.10.4"
inquirer = "^3.1.4"
openai = "^1.59.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
