[tool.poetry]
name = "ai-agent-playground"
version = "0.0.0"
description = "An experimental playground for learning and exploring different AI Agent paradigms and types"
authors = ["Sota Yamashita <sota.yamashita@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.7.0"
pydantic = "^2.6.1"
requests = "^2.32.3"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-agent = "src.cli:main"
